# grok2api

./: .gitignore  config.defaults.toml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
.github/workflows/: docker.yml
_public/static/admin/js/: config.js  token.js
_public/static/admin/pages/: cache.html  config.html  login.html  token.html
_public/static/common/html/: header.html
_public/static/common/js/: footer.js  function-header.js  header.js
_public/static/function/css/: imagine.css  video.css
_public/static/function/js/: chat.js  imagine.js  video.js
_public/static/function/pages/: chat.html  imagine.html  login.html  video.html  voice.html
_public/static/i18n/locales/: en.json  zh.json
app/api/v1/admin/: config.py  token.py
app/api/v1/function/: imagine.py
app/api/v1/public_api/: __init__.py  imagine.py  oauth.py  video.py
app/core/: auth.py  config.py  proxy_pool.py  storage.py
app/services/cf_refresh/: config.py
app/services/credits/: __init__.py  manager.py  models.py
app/services/grok/batch_services/: usage.py
app/services/grok/services/: video.py
app/services/grok/utils/: download.py  upload.py
app/services/reverse/: accept_tos.py  app_chat.py  assets_delete.py  assets_download.py  assets_list.py  assets_upload.py  media_post.py  media_post_link.py  nsfw_mgmt.py  rate_limits.py  set_birth.py  video_upscale.py  ws_livekit.py
app/services/token/: manager.py  models.py  pool.py
app/static/video/: video.html  video.js
docs/: README.en.md
(+25 files in other folders)
